--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-    <?php include 'includes/header.html'; ?>
+        <script>
+        fetch('includes/header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-container').innerHTML = data;
+            });
+    </script>
 
     <main>
         <section class="hero">
