--- a/championship.html
+++ b/championship.html
@@ -14,7 +14,7 @@
     <nav>
         <div class="logo">
             <a href="index.php" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 0.5rem;">
-                <img src="assets/images/common/JNGA_LOGO.jpg" alt="JNGA">
+                <img src="assets/images/common/JNGA_LOGO.JPG" alt="JNGA">
                 <div class="logo-text">
                     <h1 class="organization-name">日本ニアピンゴルフ協会</h1>
                     <p class="organization-motto">～全てのニアピニスト(NEARPINIST)の為に～</p>
