--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <header>
     <nav>
         <div class="logo">
-            <a href="index.php" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 0.5rem;">
+            <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 0.5rem;">
                 <img src="assets/images/common/JNGA_LOGO.jpg" alt="JNGA">
                 <div class="logo-text">
                     <h1 class="organization-name">日本ニアピンゴルフ協会</h1>
@@ -27,10 +27,10 @@
             </a>
         </div>
         <ul class="nav-links">
-            <li><a href="index.php">トップページ</a></li>
-            <li><a href="championship.php">ニアピン選手権</a></li>
-            <li><a href="nearpin.php">ニアピン検定</a></li>
-            <li><a href="jnga.php">JNGAについて</a></li>
+            <li><a href="index.html">トップページ</a></li>
+            <li><a href="championship.html">ニアピン選手権</a></li>
+            <li><a href="nearpin.html">ニアピン検定</a></li>
+            <li><a href="jnga.html">JNGAについて</a></li>
         </ul>
         <div class="menu-toggle" id="menuToggle">
             <span></span>
@@ -40,12 +40,12 @@
     </nav>
     <div class="mobile-menu" id="mobileMenu">
         <ul>
-            <li><a href="index.php">トップページ</a></li>
-            <li><a href="championship.php">ニアピン選手権</a></li>
-            <li><a href="nearpin.php">ニアピン検定</a></li>
-            <li><a href="jnga.php">JNGAについて</a></li>
-            <li><a href="sitemap.php">サイトマップ</a></li>
-            <li><a href="privacy.php">プライバシーポリシー</a></li>
+            <li><a href="index.html">トップページ</a></li>
+            <li><a href="championship.html">ニアピン選手権</a></li>
+            <li><a href="nearpin.html">ニアピン検定</a></li>
+            <li><a href="jnga.html">JNGAについて</a></li>
+            <li><a href="sitemap.html">サイトマップ</a></li>
+            <li><a href="privacy.html">プライバシーポリシー</a></li>
             <li><a href="mailto:info@jnga.jp">お問い合わせ</a></li>
         </ul>
     </div>
@@ -100,7 +100,7 @@
                 <div class="activity-card championship">
                     <div class="medal-icon"></div><h3>ニアピン選手権</h3>
                     <p>全国のゴルフコースにて開催されるオープンコンペの競技です。</p>
-                    <a href="championship.php" class="learn-more">
+                    <a href="championship.html" class="learn-more">
                         詳しく見る
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
@@ -110,7 +110,7 @@
                 <div class="activity-card">
                     <div class="golfer-icon"></div><h3>ニアピン検定</h3>
                     <p>ゴルフ技術の向上を目的とした技能検定です。</p>
-                    <a href="nearpin.php" class="learn-more">
+                    <a href="nearpin.html" class="learn-more">
                         詳しく見る
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
@@ -143,7 +143,7 @@
             <div class="activity-text">
                 <h3>ニアピンを通じて平和な楽しい輪を</h3>
                 <p>日本ニアピンゴルフ協会は、ニアピンを通じて生涯スポーツ「ゴルフ」体験を提供し、ゴルフ人口の拡大を目指します。</p>
-                <a href="jnga.php" class="read-more">JNGAについて詳しく見る</a>
+                <a href="jnga.html" class="read-more">JNGAについて詳しく見る</a>
             </div>
         </div>
     </section>
