--- a/index.html
+++ b/index.html
@@ -148,7 +148,15 @@
         </div>
     </section>
 
-    <?php include 'includes/footer.html'; ?>
+<footer>
+    <div class="footer-content">
+        <div class="footer-links">
+            <a href="sitemap.php">サイトマップ</a>
+            <a href="privacy.php">プライバシーポリシー</a>
+        </div>
+        <p>&copy; <?php echo date('Y'); ?> 日本ニアピンゴルフ協会 All Rights Reserved.</p>
+    </div>
+</footer> 
 
     <script src="assets/js/main.js"></script>
 </body>
