--- a/privacy.html
+++ b/privacy.html
@@ -143,7 +143,14 @@
         </div>
     </section>
 </main>
-
-<?php include 'includes/footer.html'; ?> 
+<footer>
+    <div class="footer-content">
+        <div class="footer-links">
+            <a href="sitemap.html">サイトマップ</a>
+            <a href="privacy.html">プライバシーポリシー</a>
+        </div>
+        <p>&copy; <?php echo date('Y'); ?> 日本ニアピンゴルフ協会 All Rights Reserved.</p>
+    </div>
+</footer> 
 </body>
 </html> 
