--- a/championship.html
+++ b/championship.html
@@ -220,8 +220,8 @@
     <footer>
     <div class="footer-content">
         <div class="footer-links">
-            <a href="sitemap.php">サイトマップ</a>
-            <a href="privacy.php">プライバシーポリシー</a>
+            <a href="sitemap.html">サイトマップ</a>
+            <a href="privacy.html">プライバシーポリシー</a>
         </div>
         <p>&copy; <?php echo date('Y'); ?> 日本ニアピンゴルフ協会 All Rights Reserved.</p>
     </div>
